--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Rolodorks</title>
-<link href="main.css" rel="stylesheet"></head>
+<link href="./main.css" rel="stylesheet"></head>
 <body>
     <h1>Develop Branch</h1>
-<script type="text/javascript" src="bundle.js"></script></body>
+<script type="text/javascript" src="./bundle.js"></script></body>
 </html>
