--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <title>Rolodorks</title>
-<link href="main.css" rel="stylesheet"></head>
+<link href="style.css" rel="stylesheet"></head>
 <body>
     <div id="app"></div>
 <script type="text/javascript" src="bundle.js"></script></body>
